<resources>
    <string name="app_name">NFCInterface</string>
    <string name="title_activity_drawer">NFC MENU</string>

    <string name="sharedPrefsKey">5758875</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <string name="nav_main">Main</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_database">Database</string>
    <string name="nav_settings">Settings</string>
    <string-array name="nav_item_activity_titles">
        <item>Main</item>
        <item>Profile</item>
        <item>Database</item>
        <item>Settings</item>
    </string-array>


    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nfchandle">NFCHandleActivity</string>

    <!-- MAIN ACT -->
    <string name="signIn">SIGN IN</string>
    <string name="scanKey">Scan card...</string>
    <string name="lastNameSignIn">Last name</string>
    <string name="confirmSignIn">Sign in</string>
    <string name="userNotFound">User not found</string>
    <string name="welcomeUser">Welcome</string>

    <!-- PROFILE -->
    <string name="uidTitle">UID</string>
    <string name="nameTitle">NAME</string>
    <string name="lastNameTitle">LAST NAME</string>
    <string name="rankTitle">RANK</string>
    <string name="errorNotConnected">NOT CONNECTED</string>

    <!-- STRINGS FOR ADDING -->

    <string name="waintingCard">Scanning</string>
    <string name="errorAttrSet">You should provide a valid AttributSet</string>
    <string name="addUsrUID">UID</string>
    <string name="addUsrName">Name</string>
    <string name="addUsrLastName">Last Name</string>
    <string name="addUsrBtn">ADD TO DATABASE</string>
    <string name="snackbar_usr_success">User added to database</string>
    <string name="snackbar_usr_failed">Failed to add user</string>
    <string name="snackbar_usr_conflict">User already in database</string>

    <string-array name="addUsrRanklvl3">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="addUsrRanklvl2">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="addUsrRanklvl0">
        <item>-1</item>
    </string-array>

    <string name="errorPrivilege">You don\'t have the nescessary privileges</string>


    <string name="databaseDisplayTitle">Users in database</string>

    <string name="rankDisplayRecycler">Rank</string>
    <string name="userDeletedSnackbar">User deleted</string>
    <string name="undoSnackBar">Undo</string>
    <string name="noUserInDb">No users found in the database</string>

    <string name="addCardActivityName">Manage users</string>

    <string name="serviceApduDescription">Handle PTI AID</string>
    <string name="aidDescription">081A2B5C6F</string>
    <string name="activity_into">Reader mode active</string>
    <string name="aiddescription">aiddescription</string>
    <string name="servicedesc">servicedesc</string>

    <string name="nfcLinkBroken">The NFC link has been broken</string>
    <string name="cardNowEmulated">Your UID is now continuously emulated</string>
    <string name="cardNotEmulated">Your UID is not emulated anymore</string>
    <string name="notConnected">You are not connected to emulate your card</string>

    <string name="alterUserToolbar">Modify user data</string>

</resources>
